--- a/src/components/Advantage/styles.module.scss
+++ b/src/components/Advantage/styles.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors";
+
 .advantages {
   height: 600px;
   width: 100%;
@@ -5,13 +7,13 @@
   margin: 0 auto;
   padding: 40px 0;
 
-  background-color: #ffffff;
+  background-color: $white;
 
-  color: #000000;
+  color: $black;
   font-family: Fester, Inter,sans-serif;
 
   &--grey {
-    background-color: #F7F7F7;
+    background-color: $light-gray-advantages;
   }
 }
 
@@ -31,7 +33,7 @@
   width: 520px;
   height: 520px;
 
-  background-color: #f7ca60;
+  background-color: $orange-advantages;
   border-radius: 600px;
 
   display: flex;
@@ -50,7 +52,7 @@
 }
 
 .info {
-  font-family: 'Fester', sans-serif;
+  font-family: 'Fester', Inter, sans-serif;
   font-weight: bolder;
   width: 40%;
 }
@@ -58,7 +60,6 @@
 .title {
   width: 100%;
   font-size: 55px;
-  /*color: #f7ca60;*/
 
   margin: 0 0 30px;
   font-weight: 400;
@@ -77,7 +78,7 @@
   font-size: 18px;
   font-weight: lighter;
   line-height: 2rem;
-  color: #000000;
+  color: $black;
   filter: brightness(87%);
 }
 
@@ -86,16 +87,16 @@
 
   padding: 10px;
 
-  border: 1px solid #000000;
+  border: 1px solid $black;
   border-radius: 15px;
-  color: #000000;
+  color: $black;
   text-decoration: none;
 
   transition:  all .1s ease-in-out;
 
   &:hover {
-    border-color: #c2c2c2;
-    color: white;
-    background-color: #c2c2c2;
+    border-color: $gray-advantages;
+    color: $black;
+    background-color: $gray-advantages;
   }
 }
