--- a/src/components/FeatureCard/styles.module.scss
+++ b/src/components/FeatureCard/styles.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/colors";
+
 .card {
   display: flex;
   flex-direction: column;
@@ -43,7 +45,7 @@
   text-align: center;
   font-weight: 200;
 
-  color: #B5B5B5;
+  color: $gray-cards;
 }
 
 //
