--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,5 +1,7 @@
+@import "src/styles/colors";
+
 .header {
-  background-color: #269AFF;
+  background-color: $prix-header;
 }
 
 .content {
@@ -11,15 +13,13 @@
 
   margin: 0 auto;
 
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: Fester, Inter, sans-serif;
   font-size: 16px;
-  color: #FFFFFF;
+  color: $white;
 }
 
-
-
 .logo {
-  color: #FFFFFF;
+  color: $white;
   font-size: 60px;
 
   margin: 0;
@@ -45,22 +45,3 @@
     scale: 1.05;
   }
 }
-
-//.header__button {
-//  background-color: #0070f3;
-//  border: none;
-//  border-radius: 10px;
-//
-//  font-family: 'Fester', sans-serif;
-//  font-weight: 800;
-//  font-size: 16px;
-//  color: #FFFFFF;
-//
-//  margin: 28px 0;
-//  padding: 0 25px;
-//}
-//
-//.header__button:hover {
-//  cursor: pointer;
-//  opacity: 0.9;
-//}
