--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -1,15 +1,13 @@
 @import "src/styles/colors";
 
-@font-face {
-  font-family: 'Fester';
-  src: url("../../../public/fonts/Fester/Fester_Regular.woff");
-}
-
 .intro {
-  background-image: url("/images/intro.png");
+  background-image: url("../../../public/images/intro.png");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
+
+  font-family: Fester, Inter, sans-serif;
+  color: $white;
 
   padding: 50px 0 50px;
 }
