--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -82,22 +82,43 @@
   width: 200px;
   justify-content: space-between;
   list-style: none;
-}
 
-.icon {
-  width: 35px;
-  height: 35px;
-  border: 1px solid black;
-  border-radius: 15px;
+  &--icon {
+    width: 35px;
+    height: 35px;
 
-  transition: all .3s ease-in-out;
+    border: 1px solid black;
+    border-radius: 15px;
 
-  &:hover {
-    scale: 1.05;
-    background-color: $gray-blog;
+    overflow: hidden;
+
+    transition: all .1s ease-in-out;
+
+    &:hover {
+      scale: 1.05;
+      background-color: $gray-advantages;
+    }
+  }
+
+  &--anchor {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  &--image {
+    width: 70%;
   }
 }
+
 .anchor {
+  width: 100%;
+  height: 100%;
+
   text-decoration: none;
   color: black
 }
