--- a/src/components/FeatureCard/styles.module.scss
+++ b/src/components/FeatureCard/styles.module.scss
@@ -48,31 +48,10 @@
   color: $gray-cards;
 }
 
-//
-//@media screen and (max-width: 420px) {
-//  .features {
-//    padding: 40px 0;
-//  }
-//
-//  .features__header {
-//    font-size: 26px;
-//    margin: 20px 15px;
-//  }
-//
-//  .features__cards {
-//    flex-direction: column;
-//  }
-//
-//  .features__card {
-//    width: 95%;
-//    margin: 0 0 20px;
-//  }
-//
-//  .features__title{
-//    margin: 20px 0 0;
-//  }
-//
-//  .features__description {
-//    margin: 15px 0;
-//  }
-//}
+
+@media screen and (max-width: 420px) {
+  .description {
+    font-weight: 400;
+    filter: brightness(60%);
+  }
+}
