--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
 
+  border-bottom: 1px solid rgb(255, 255, 255, .2);
   box-sizing: border-box;
   width: calc(100% - 80px);
 
@@ -45,5 +46,19 @@
       cursor: pointer;
       scale: 1.05;
     }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .header {
+    width: 100%;
+  }
+
+  .content {
+    width: 95%;
+  }
+
+  .navigation {
+    display: none;
   }
 }
