--- a/src/components/Advantage/styles.module.scss
+++ b/src/components/Advantage/styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors";
 
 .advantages {
-  height: 600px;
+  min-height: 600px;
   width: 100%;
 
   margin: 0 auto;
@@ -99,4 +99,45 @@
     color: $black;
     background-color: $gray-advantages;
   }
+}
+
+@media screen and (max-width: 420px) {
+  .wrapper {
+    width: 95%;
+    flex-direction: column;
+  }
+
+  .info {
+    width: 100%;
+    text-align: center;
+  }
+
+  .title {
+    font-size: 36px;
+    font-weight: 800;
+  }
+
+  .subtitle {
+    width: 100%;
+    font-weight: 600;
+  }
+
+  .text {
+    width: 100%;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 200px;
+    margin: 40px 0 0;
+    overflow: hidden;
+  }
+
+  .image {
+    object-fit: contain;
+    //max-height: 100%;
+    max-width: 100%;
+  }
+
+
 }
