--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -7,7 +7,7 @@
 }
 
 .wrapper {
-  width: 80%;
+  max-width: 80%;
   margin: 0 auto;
   padding: 30px 0;
 }
@@ -19,7 +19,7 @@
 }
 
 .holdingInfo {
-  width: 30%;
+  max-width: 30%;
 
   &--title {
     display: flex;
@@ -121,4 +121,45 @@
 
   text-decoration: none;
   color: black
+}
+
+@media screen and (max-width: 420px) {
+  .wrapper {
+    max-width: 90%;
+  }
+
+  .flex {
+    flex-direction: column;
+  }
+
+  .holdingInfo {
+    max-width: 100%;
+  }
+
+  .lists {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .list {
+
+    &--title:nth-of-type(2n) {
+      text-align: center;
+      color: blue;
+    }
+  }
+
+  .bottom {
+    flex-direction: column-reverse;
+  }
+
+  .social {
+    width: 100%;
+    justify-content: space-around;
+    padding: 0;
+  }
+
+  .copyright {
+    text-align: center;
+  }
 }
