--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -40,3 +40,28 @@
 
   scale: 1.2;
 }
+
+@media screen and (max-width: 420px) {
+  .wrapper {
+    width: 95%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .title {
+    width: 100%;
+    font-size: 32px;
+    font-weight: 600;
+  }
+
+  .subtitle {
+    font-size: 16px;
+  }
+
+  .image {
+    width: 65%;
+    left: 0;
+    margin: 30px auto
+  }
+}
