--- a/src/components/Advantage/styles.module.scss
+++ b/src/components/Advantage/styles.module.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.imageContainer {
+.image-container {
   width: 520px;
   height: 520px;
 
@@ -126,7 +126,7 @@
     width: 100%;
   }
 
-  .imageContainer {
+  .image-container {
     width: 100%;
     height: 200px;
     margin: 40px 0 0;
@@ -135,9 +135,6 @@
 
   .image {
     object-fit: contain;
-    //max-height: 100%;
     max-width: 100%;
   }
-
-
 }
