--- a/src/components/Blog/styles.module.scss
+++ b/src/components/Blog/styles.module.scss
@@ -49,7 +49,7 @@
   width: 500px;
 }
 
-.imageContainer {
+.image-container {
   width: 100%;
   height: 300px;
   border-radius: 18px;
@@ -97,7 +97,6 @@
 
 @media screen and (max-width: 420px) {
   .blog {
-    //display: none;
     padding: 50px 0;
   }
 
@@ -130,7 +129,7 @@
     }
   }
 
-  .imageContainer {
+  .image-container {
     max-height: 250px;
   }
 
