--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -61,21 +61,21 @@
     opacity: .7;
   }
 
-  &-close {
+  &--close {
     width: 30px;
     height: 30px;
 
     opacity: .7;
   }
 
-  &-icon {
+  &__icon {
     width: 100%;
     height: 100%;
   }
 }
 
 .navigation {
-  &--list {
+  &__list {
     display: flex;
     justify-content: space-around;
     list-style: none;
@@ -83,7 +83,7 @@
     padding: 24px;
   }
 
-  &--item {
+  &__item {
     font-size: 18px;
     transition: scale .2s ease-in-out;
 
