--- a/src/components/Posts/MajorPost/styles.module.scss
+++ b/src/components/Posts/MajorPost/styles.module.scss
@@ -1,14 +1,15 @@
-@import "../../styles/colors";
+@import "../../../styles/colors";
 
 .post {
-  width: 368px;
+  width: 768px;
   height: 374px;
 
   margin: 16px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
+  position: relative;
 
   box-sizing: border-box;
   border: 4px solid rgb(240, 240, 240, .3);
@@ -17,20 +18,13 @@
   overflow: hidden;
 
   font-family: Fester, Inter, sans-serif;
-
-  transition: all .18s ease-in-out;
-
-  &--major {
-    width: 768px;
-  }
+  color: $white;
 
   &:hover {
-    background-color: $light-gray-posts;
-    scale: 1.0039;
     cursor: pointer;
 
     .image {
-      filter: brightness(.9);
+      scale: 1.1;
     }
   }
 }
@@ -39,10 +33,13 @@
   width: 100%;
   object-fit: contain;
   object-position: bottom;
-  transition: all .18s ease-in-out;
+  filter: brightness(.6);
+  transition: all .4s ease-in-out;
 
   &-container {
-    height: 60%;
+    position: absolute;
+    z-index: -1;
+    height: 100%;
     box-sizing: border-box;
     overflow: hidden;
     object-position: center;
@@ -50,7 +47,10 @@
 }
 
 .title {
+  margin: 0;
   padding: 0 15px;
+  font-size: 42px;
+
 }
 
 .flex-container {
@@ -63,7 +63,7 @@
 
 .date {
   font-size: 14px;
-  font-weight: 200;
+  font-weight: 600;
 }
 
 .tag {
