--- a/src/components/Posts/StandardPost/styles.module.scss
+++ b/src/components/Posts/StandardPost/styles.module.scss
@@ -1,15 +1,14 @@
-@import "../../styles/colors";
+@import "../../../styles/colors";
 
 .post {
-  width: 768px;
+  width: 368px;
   height: 374px;
 
   margin: 16px;
 
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  position: relative;
+  justify-content: space-between;
 
   box-sizing: border-box;
   border: 4px solid rgb(240, 240, 240, .3);
@@ -18,13 +17,20 @@
   overflow: hidden;
 
   font-family: Fester, Inter, sans-serif;
-  color: $white;
+
+  transition: all .18s ease-in-out;
+
+  &--major {
+    width: 768px;
+  }
 
   &:hover {
+    background-color: $light-gray-posts;
+    scale: 1.0039;
     cursor: pointer;
 
     .image {
-      scale: 1.1;
+      filter: brightness(.9);
     }
   }
 }
@@ -33,13 +39,10 @@
   width: 100%;
   object-fit: contain;
   object-position: bottom;
-  filter: brightness(.6);
-  transition: all .4s ease-in-out;
+  transition: all .18s ease-in-out;
 
   &-container {
-    position: absolute;
-    z-index: -1;
-    height: 100%;
+    height: 60%;
     box-sizing: border-box;
     overflow: hidden;
     object-position: center;
@@ -47,10 +50,7 @@
 }
 
 .title {
-  margin: 0;
   padding: 0 15px;
-  font-size: 42px;
-
 }
 
 .flex-container {
@@ -63,7 +63,7 @@
 
 .date {
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 200;
 }
 
 .tag {
