--- a/src/components/BlogBody/styles.module.scss
+++ b/src/components/BlogBody/styles.module.scss
@@ -18,6 +18,8 @@
     font-weight: 800;
     margin: 0;
     padding: 0 16px;
+
+    cursor: default;
   }
 }
 
@@ -26,6 +28,7 @@
 }
 
 .routeback {
+  width: 130px;
   color: $prix-sat;
   padding: 0 16px;
 
