fix: post titles addition, image compression

--- a/src/components/Posts/StandardPost/styles.module.scss
+++ b/src/components/Posts/StandardPost/styles.module.scss
@@ -50,7 +50,11 @@
 }
 
 .title {
+  max-height: 70px;
   padding: 0 15px;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  overflow: initial;
 }
 
 .flex-container {
