--- a/src/components/Blog/styles.module.scss
+++ b/src/components/Blog/styles.module.scss
@@ -10,7 +10,7 @@
 
 .wrapper {
   width: 80%;
-  margin: 100px 0;
+  margin: 0;
 
   display: flex;
   flex-direction: column;
@@ -23,9 +23,18 @@
 
 .title {
   font-size: 42px;
-  width: 600px;
+  text-decoration: none;
+  color: $black;
 
+  width: 600px;
   margin: 0;
+
+  transition: all .2s ease-in-out;
+
+  &:hover {
+    opacity: .8;
+    scale: 1.002;
+  }
 }
 
 .subtitle {
