--- a/src/components/BlogBody/styles.module.scss
+++ b/src/components/BlogBody/styles.module.scss
@@ -45,3 +45,17 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.link {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .blog {
+    &__wrapper {
+      display: block;
+      width: 95%;
+    }
+  }
+}
