--- a/src/components/PostCard/styles.module.scss
+++ b/src/components/PostCard/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/colors";
+@import "../../styles/colors";
 
 .post {
   width: 368px;
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 
   box-sizing: border-box;
   border: 4px solid rgb(240, 240, 240, .3);
@@ -17,11 +18,21 @@
   overflow: hidden;
 
   font-family: Fester, Inter, sans-serif;
+  color: $black;
 
   transition: all .18s ease-in-out;
 
   &--major {
     width: 768px;
+    justify-content: flex-end;
+    color: $white;
+    box-sizing: border-box;
+
+    &:hover {
+      .image {
+        scale: 1.1;
+      }
+    }
   }
 
   &:hover {
@@ -30,22 +41,31 @@
     cursor: pointer;
 
     .image {
-      filter: brightness(.9);
+      filter: brightness(.6);
     }
   }
 }
 
 .image {
   width: 100%;
-  object-fit: contain;
-  object-position: bottom;
   transition: all .18s ease-in-out;
 
-  &-container {
-    height: 60%;
-    box-sizing: border-box;
-    overflow: hidden;
-    object-position: center;
+  &--major {
+    filter: brightness(.6);
+
+    transition: all .4s ease-in-out;
+  }
+}
+
+.image-container {
+  height: 60%;
+  box-sizing: border-box;
+  overflow: hidden;
+
+  &--major {
+    position: absolute;
+    z-index: -1;
+    height: 100%;
   }
 }
 
@@ -55,6 +75,12 @@
   text-overflow: ellipsis;
   white-space: pre-wrap;
   overflow: initial;
+
+  &--major {
+    margin: 0;
+    max-height: 120px;
+    font-size: 42px;
+  }
 }
 
 .flex-container {
@@ -68,19 +94,24 @@
 .date {
   font-size: 14px;
   font-weight: 200;
+
+  &--major {
+    font-weight: 600;
+  }
 }
 
-.tag {
-  width: 70px;
-  height: 25px;
+@media screen and (max-width: 1200px) {
 
-  background-color: $prix-sat;
-  border: none;
-  border-radius: 10px;
+  .post {
+    margin: 16px auto;
+  }
 
-  text-align: center;
-  font-weight: 600;
-  color: $white;
+  .image-container {
+    display: flex;
+  }
 
-  transition: all .2s ease-in-out;
+  .image {
+    object-fit: cover;
+  }
+
 }
