--- a/src/components/CarCard/styles.module.scss
+++ b/src/components/CarCard/styles.module.scss
@@ -2,7 +2,6 @@
 
 .card {
   width: 100%;
-  max-height: 320px;
   overflow: hidden;
 
   border: 3px solid rgb(240, 240, 240);
@@ -25,12 +24,12 @@
 .image-container {
   height: 50%;
   width: 100%;
-  display: flex;
+
+  overflow: hidden;
 }
 
 .image {
   width: 100%;
-  object-fit: cover;
 }
 
 .car-info {
@@ -95,5 +94,31 @@
   &__views-icon {
     width: 15px;
     margin-left: 3px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .card {
+    margin: 0 0 15px;
+  }
+
+  .car-info {
+    height: 50%;
+
+    &__title {
+      font-size: 24px;
+    }
+
+    &__price {
+      font-size: 36px;
+    }
+
+    &__specs {
+      font-size: 18px
+    }
+
+    &__secondary {
+      font-size: 16px;
+    }
   }
 }
