--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -3,13 +3,25 @@
 .pagination {
   display: flex;
   list-style: none;
+  position: absolute;
+  bottom: -100px;
+  left: 50%;
 
   &__page-number {
     margin: 0 20px;
     border-bottom: 1px solid $light-gray-posts;
 
+    cursor: pointer;
+
+    transition: all .2s ease-in-out;
+
+    &:hover {
+      opacity: .8;
+      scale: 1.1;
+    }
+
     &--active {
-      font-weight: 600;
+      font-weight: 800;
     }
   }
 }
