--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -1,11 +1,15 @@
 @import "../../styles/colors";
 
 .pagination {
-  display: flex;
-  list-style: none;
   position: absolute;
   bottom: -100px;
   left: 50%;
+  display: flex;
+
+  &__list{
+    display: flex;
+    list-style: none;
+  }
 
   &__page-number {
     margin: 0 20px;
@@ -19,9 +23,15 @@
       opacity: .8;
       scale: 1.1;
     }
+  }
+
+  &__page-link {
+    color: $black;
+    text-decoration: none;
 
     &--active {
       font-weight: 800;
+      color: red;
     }
   }
 }
