--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -11,17 +11,51 @@
     background-color: $white;
     border-bottom: 2px solid $prix-header;
   }
+
+  &__language {
+    &-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      border-radius: 6px;
+      background-color: $white;
+      width: 32px;
+      height: 32px;
+      cursor: pointer;
+
+      transition: all .2s ease-in-out;
+
+      &:hover {
+        scale: 1.08;
+      }
+
+      &:active {
+        scale: 1.14;
+        filter: brightness(.9);
+      }
+    }
+
+    &-content {
+      margin: 0;
+      color: $prix-sat;
+
+      font-weight: 600;
+    }
+  }
 }
 
 .content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
   border-bottom: 1px solid rgb(255, 255, 255, .2);
   box-sizing: border-box;
   width: calc(100% - 80px);
 
   margin: 0 auto;
+  padding-right: 40px;
 
   font-family: Fester, Inter, sans-serif;
   font-size: 16px;
