--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -15,14 +15,16 @@
   &__language {
     &-button {
       display: flex;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
 
       border-radius: 6px;
       background-color: $white;
-      width: 32px;
+      width: 64px;
       height: 32px;
       cursor: pointer;
+
+      padding: 0 2px;
 
       transition: all .2s ease-in-out;
 
@@ -41,6 +43,11 @@
       color: $prix-sat;
 
       font-weight: 600;
+    }
+
+    &-flag {
+      width: 25px;
+
     }
   }
 }
