--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,8 @@
 $black: #000000;
 $white: #ffffff;
+$main-gray: #FBFBFE;
+$purple-light: #F3E5FF;
+$purple-sat: #7D67EA;
 $light-gray-advantages: #f7f7f7;
 $orange-advantages: #f7ca60;
 $prix: #0070f3;
