--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -22,4 +22,44 @@
   src: url("../../public/fonts/Fester/Fester_Bold.woff");
 }
 
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 100;
+  src: url("../../public/fonts/Gilroy/Gilroy-Thin.woff");
+}
 
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 200;
+  src: url("../../public/fonts/Gilroy/Gilroy-UltraLight.woff");
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 300;
+  src: url("../../public/fonts/Gilroy/Gilroy-Light.woff");
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 400;
+  src: url("../../public/fonts/Gilroy/Gilroy-Medium.woff2");
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 500;
+  src: url("../../public/fonts/Gilroy/Gilroy-Semibold.woff2");
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 600;
+  src: url("../../public/fonts/Gilroy/Gilroy-Extrabold.woff");
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  font-weight: 700;
+  src: url("../../public/fonts/Gilroy/Gilroy-Heavy.woff");
+}
