--- a/src/components/Features/styles.module.scss
+++ b/src/components/Features/styles.module.scss
@@ -7,7 +7,9 @@
   font-weight: 800;
   color: $black;
 
-  margin: 40px 0 80px;
+  margin: 0 0 80px;
+  padding: 100px 0;
+  background-color: $main-gray;
 }
 
 .cards {
