refactor: features section redesign

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,10 @@ $white: #ffffff;
 $main-gray: #FBFBFE;
 $purple-light: #F3E5FF;
 $purple-sat: #7D67EA;
+$gray-card-background: #F2F2F8;
+$text-color-primary: #040415;
+$text-color-secondary: #7a7a7a;
+$text-color-thirtiary: #D1848B;
 $light-gray-advantages: #f7f7f7;
 $orange-advantages: #f7ca60;
 $prix: #0070f3;
@@ -12,4 +16,5 @@ $prix-header: #269AFF;
 $gray-advantages: #c2c2c2;
 $gray-blog: #a2a2a2;
 $gray-cards: #b5b5b5;
+
 $light-gray-posts: #f0f0f0;
