feature: swap old banner with updated

--- a/src/components/Strategy/styles.module.scss
+++ b/src/components/Strategy/styles.module.scss
@@ -4,6 +4,8 @@
     margin: 140px auto;
     max-width: 1200px;
 
+    font-family: Gilroy, Inter, sans-serif;
+
     &__title {
         @include section-title;
     }
