--- a/src/components/FAQ/styles.module.scss
+++ b/src/components/FAQ/styles.module.scss
@@ -18,4 +18,24 @@
         margin: 12px 0;
         font-size: 40px;
     }
+
+    &__button {
+        display: block;
+        margin: 60px auto 0;
+        padding: 18px 80px;
+
+        background: #01cab0;
+        border-radius: 10px;
+        border: none;
+
+        font-weight: 600;
+        font-size: 16px;
+        color: #fff;
+
+        cursor: pointer;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
 }
