--- a/src/components/FAQ/styles.module.scss
+++ b/src/components/FAQ/styles.module.scss
@@ -24,7 +24,7 @@
         margin: 60px auto 0;
         padding: 18px 80px;
 
-        background: #01cab0;
+        background: #000000;
         border-radius: 10px;
         border: none;
 
