--- a/src/components/Strategy/styles.module.scss
+++ b/src/components/Strategy/styles.module.scss
@@ -14,9 +14,11 @@
 
     &__info {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 3fr 3fr 2fr;
         grid-template-rows: repeat(2, 1fr);
         row-gap: 70px;
+
+        justify-content: space-between;
 
         padding: 0;
         margin: 0;
