--- a/src/components/JorneyMap/styles.module.scss
+++ b/src/components/JorneyMap/styles.module.scss
@@ -28,6 +28,32 @@
   }
 }
 
+.content {
+  width: 600px;
+  height: 490px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  padding: 70px 0;
+  box-sizing: border-box;
+
+  &__step {
+    font-size: 90px;
+    margin: 0;
+  }
+
+  &__description {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 60px;
+    z-index: 2;
+    position: relative;
+    margin: 0;
+  }
+}
+
 .illustration {
   width: 520px;
   height: 520px;
@@ -40,7 +66,7 @@
   flex-direction: column;
   justify-content: center;
 
-  padding: 80px;
+  padding: 100px 80px;
   box-sizing: border-box;
 
   &--transparent {
@@ -75,6 +101,7 @@
     margin: 0;
     text-align: center;
     font-size: 28px;
+    font-weight: 700;
   }
 }
 
