--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -31,15 +31,16 @@
 
     &:hover {
       scale: 1.1;
-      color: #D1848B;
+      //color: #D1848B;
+      color: #64DBFB;
       cursor: pointer;
-      background-color: #c2c2c2;
+      background-color: $light-gray-advantages;
     }
   }
 
   &__link {
+    color: inherit;
     text-decoration: none;
-    color: $text-color-primary;
   }
 }
 
