fix: dropdown showup details

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -89,6 +89,7 @@
   &__list {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
     width: 500px;
     margin: 0;
