--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -3,10 +3,10 @@
 .dropdown {
   &__list {
     overflow: hidden;
-    animation: showup .1s ease-in-out;
+    animation: showup .2s ease-in-out;
 
     position: absolute;
-    top: 70px;
+    top: 90px;
     left: -60px;
 
     min-width: 150px;
@@ -20,6 +20,8 @@
     border-radius: 30px;
 
     padding: 20px;
+
+    transform: translateY(-20px);
   }
 
   &__item {
@@ -31,7 +33,6 @@
 
     &:hover {
       scale: 1.1;
-      //color: #D1848B;
       color: #64DBFB;
       cursor: pointer;
       background-color: $light-gray-advantages;
@@ -46,10 +47,10 @@
 
 @keyframes showup {
   0% {
-    height: 0;
+    transform: translateY(0);
   }
 
   100% {
-    height: auto;
+    transform: translateY(-20px);
   }
 }
