--- a/src/components/Features/styles.module.scss
+++ b/src/components/Features/styles.module.scss
@@ -9,6 +9,14 @@
   padding: 100px 0;
   background-color: $main-gray;
 
+  &__wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: space-around;
+  }
+
   &__card {
     display: flex;
     flex-direction: column;
@@ -25,6 +33,14 @@
     border-radius: 50px;
 
     overflow: hidden;
+
+    &--about {
+      width: 500px;
+    }
+
+    &--regulations {
+      width: 620px;
+    }
 
     &-title {
       font-size: 24px;
@@ -68,20 +84,4 @@
       bottom: -30px;
     }
   }
-
-  &__about {
-    width: 500px;
-  }
-
-  &__regulations {
-    width: 620px;
-  }
-}
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-
-  display: flex;
-  justify-content: space-around;
 }
