--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -29,7 +29,7 @@
 
   margin: 0 auto;
 
-  font-family: Fester, Inter, sans-serif;
+  font-family: Gilroy, Inter, sans-serif;
   font-size: 16px;
   color: $black;
 }
