--- a/src/components/Calculator/styles.module.scss
+++ b/src/components/Calculator/styles.module.scss
@@ -1,71 +1,92 @@
 @import "../../styles/mixins";
 
 .calculator {
-    max-width: 1200px;
-    margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
 
-    font-family: Gilroy, Inter, sans-serif;
+  font-family: Gilroy, Inter, sans-serif;
 
-    &__title {
-        @include section-title;
-        font-weight: 600;
-        font-size: 56px;
+  &__title {
+    @include section-title;
+    font-weight: 600;
+    font-size: 56px;
 
-        &-line:first-of-type {
-            margin-right: 10px;
-        }
+    &-line:first-of-type {
+      margin-right: 10px;
+    }
+  }
+
+  &__text {
+    max-width: 50%;
+
+    &-title {
+      font-size: 46px;
+      font-weight: 500;
+      line-height: 50px;
+
+      margin: 0 0 20px;
     }
 
-    &__text {
-        max-width: 50%;
+    &-description {
+      font-size: 28px;
+      font-weight: 400;
+      line-height: 40px;
 
-        &-title {
-            font-size: 46px;
-            font-weight: 500;
-            line-height: 50px;
-
-            margin: 0 0 20px;
-        }
-
-        &-description {
-            font-size: 28px;
-            font-weight: 400;
-            line-height: 40px;
-
-            margin: 0;
-        }
+      margin: 0;
     }
+  }
 
 
-    &__wrapper {
-        box-sizing: border-box;
-        min-height: 480px;
-        width: 100%;
-        background: linear-gradient(227.67deg,#ded9ff -16.22%,#dcfff9),#f2f2f8;
+  &__wrapper {
+    box-sizing: border-box;
+    min-height: 480px;
+    width: 100%;
+    background: linear-gradient(227.67deg,#ded9ff -16.22%,#dcfff9),#f2f2f8;
 
-        padding: 75px 65px;
-        border-radius: 50px;
+    padding: 75px 65px;
+    border-radius: 50px;
 
-        position: relative;
+    position: relative;
+  }
+
+  &__gadget {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+
+    background-color: #fbfbfe;
+
+    width: 30%;
+    height: calc(100% - 80px);
+
+    border-radius: 26px;
+    border: 10px solid rgb(218 218 218 / 30%);
+    filter: drop-shadow(0 5px 35px rgba(4,4,21,.06));
+  }
+
+  &__button {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: block;
+    padding: 12px 40px;
+
+    background: #000000;
+    border-radius: 10px;
+    border: none;
+
+    font-weight: 600;
+    font-size: 16px;
+    color: #fff;
+
+    cursor: pointer;
+
+    &--disabled {
+      background-color: #a2a2a2;
+      cursor: auto;
     }
-
-    &__gadget {
-        position: absolute;
-        top: 50%;
-        left: 80%;
-        transform: translate(-50%, -50%);
-
-        background-color: #fbfbfe;
-
-        width: 30%;
-        height: calc(100% - 80px);
-
-        border-radius: 26px;
-        border: 10px solid rgb(218 218 218 / 30%);
-        filter: drop-shadow(0 5px 35px rgba(4,4,21,.06));
-    }
-
-    &__text {
-
-    }
+  }
 }
