--- a/src/pages/blog/styles.module.scss
+++ b/src/pages/blog/styles.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 50px 0;
 
-  font-family: Fester, Inter, sans-serif;
+  font-family: Gilroy, Inter, sans-serif;
 
   &__wrapper {
     max-width: 1200px;
@@ -28,7 +28,6 @@
 }
 
 .route-back {
-  width: 130px;
   color: $prix-sat;
   padding: 0 16px;
 
