--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -3,21 +3,22 @@
 .dropdown {
   &__list {
     overflow: hidden;
-    animation: showup .2s ease-in-out;
+    animation: showup .4s ease-in-out;
 
     position: absolute;
     top: 90px;
     left: -60px;
 
-    min-width: 150px;
+    min-width: 200px;
 
     list-style: none;
 
     font-family: Gilroy, Inter, sans-serif;
+    color: black;
 
     background-color: $main-gray;
     border: 1px solid $light-gray-posts;
-    border-radius: 30px;
+    border-radius: 15px;
 
     padding: 20px;
 
@@ -32,10 +33,8 @@
     font-weight: 300;
 
     &:hover {
-      scale: 1.1;
-      color: #64DBFB;
+      color: #7D67EA;
       cursor: pointer;
-      background-color: $light-gray-advantages;
     }
   }
 
