--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -3,8 +3,8 @@
 .header {
   background-color: $main-gray;
   position:-webkit-sticky;
-  position:sticky;
-  top:0;
+  position: sticky;
+  top: 0;
   z-index: 10;
 
   &--white {
@@ -91,25 +91,17 @@
     justify-content: space-around;
     align-items: center;
     list-style: none;
-    width: 500px;
+
     margin: 0;
+    padding: 0;
+
     height: 100%;
-  }
-
-  &__item {
-    font-size: 16px;
-    position: relative;
-    text-align: center;
-
-    display: flex;
-    align-items: center;
   }
 }
 
 .link {
   text-decoration: none;
   color: $black;
-  font-family: Gilroy, Inter, sans-serif;
   font-weight: 400;
 
   transition: color .2s ease-in-out;
