--- a/src/components/NavItem/styles.module.scss
+++ b/src/components/NavItem/styles.module.scss
@@ -9,8 +9,13 @@
   font-family: Gilroy, Inter, sans-serif;
 
   position: relative;
+  margin: 0 20px;
 
   transition: all .1s ease-in-out;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
 
   &:hover {
     cursor: pointer;
