--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     background-color: $main-gray;
+    font-family: Gilroy, Inter, sans-serif;
 }
 
 .wrapper {
@@ -12,7 +13,6 @@ body {
 
 .container {
     width: 100%;
-
     margin: 0 auto;
 }
 
