feature: add animations to JourneyMap

--- a/src/styles/keyframes.scss
+++ b/src/styles/keyframes.scss
@@ -7,3 +7,23 @@
     opacity: 1;
   }
 }
+
+@keyframes translateLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes translateRight {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
