--- a/src/components/JorneyMap/styles.module.scss
+++ b/src/components/JorneyMap/styles.module.scss
@@ -157,39 +157,48 @@
 }
 
 @media screen and (max-width: 420px) {
-  .wrapper {
-    width: 95%;
-    flex-direction: column;
-  }
-
-  .info {
+  .journey-map {
     width: 100%;
-    text-align: center;
-  }
-
-  .title {
-    font-size: 36px;
-    font-weight: 800;
-  }
-
-  .subtitle {
-    width: 100%;
-    font-weight: 600;
-  }
-
-  .text {
-    width: 100%;
-  }
-
-  .image-container {
-    width: 100%;
-    height: 200px;
-    margin: 40px 0 0;
+    box-sizing: border-box;
     overflow: hidden;
+    padding: 25px 15px 0;
   }
 
-  .image {
-    object-fit: contain;
-    max-width: 100%;
+  .wrapper {
+    width: 100%;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+
+  .content {
+    width: 100%;
+    height: auto;
+
+    justify-content: start;
+
+    padding: 0 10px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+
+    &__step {
+      font-size: 34px;
+      line-height: 38px;
+      font-weight: 400;
+    }
+
+    &__description {
+      margin-top: 20px;
+      font-weight: 400;
+      font-size: 28px;
+      line-height: 34px;
+      height: auto;
+    }
+  }
+
+  .illustration {
+    width: 335px;
+    height: 335px;
+
+    margin: 0 auto;
   }
 }
