--- a/src/components/Strategy/styles.module.scss
+++ b/src/components/Strategy/styles.module.scss
@@ -1,6 +1,8 @@
 @import "src/styles/mixins";
+@import "../../styles/colors";
 
 .strategy {
+    width: 100%;
     margin: 140px auto;
 
     &__title {
@@ -12,7 +14,7 @@
     &__info {
         display: grid;
         grid-template-columns: 3fr 3fr 2fr;
-        grid-template-rows: repeat(2, 1fr);
+        //grid-template-rows: repeat(2, 1fr);
         row-gap: 70px;
 
         justify-content: space-between;
@@ -38,6 +40,60 @@
                 font-size: 18px;
                 line-height: 24px;
             }
+        }
+    }
+
+    &__link {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .strategy {
+        padding: 0 15px;
+        margin: 60px 0;
+        box-sizing: border-box;
+
+        &__wrapper {
+            width: 100%;
+        }
+
+        &__title {
+            font-size: 30px;
+            line-height: 34px;
+        }
+
+        &__info {
+            grid-template-columns: repeat(2, 1fr);
+            row-gap: 40px;
+
+            &-item {
+                &-title {
+                    font-size: 18px;
+                    font-weight: 600;
+                    line-height: 26px;
+                }
+
+                &-subtitle {
+                    font-size: 14px;
+                    line-height: 22px;
+                }
+            }
+        }
+
+        &__link {
+            display: block;
+
+            max-width: 300px;
+
+            margin: 45px auto 0;
+
+            text-align: center;
+            text-decoration: none;
+            color: $text-color-primary;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 24px;
         }
     }
 }
