--- a/src/components/Calculator/styles.module.scss
+++ b/src/components/Calculator/styles.module.scss
@@ -1,14 +1,36 @@
 @import "../../styles/mixins";
 
 .calculator {
+  width: 100%;
+  padding: 0 0 100px;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
   &__title {
     @include section-title;
     font-weight: 600;
     font-size: 56px;
+    margin: 0 0 30px;
 
     &-line:first-of-type {
       margin-right: 10px;
     }
+  }
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+
+    box-sizing: border-box;
+    min-height: 480px;
+    background: linear-gradient(227.67deg,#ded9ff -16.22%,#dcfff9),#f2f2f8;
+
+    padding: 35px;
+    border-radius: 50px;
   }
 
   &__text {
@@ -19,53 +41,37 @@
       font-weight: 500;
       line-height: 50px;
 
-      margin: 0 0 20px;
+      margin: 0 0 60px;
     }
 
     &-description {
       font-size: 28px;
       font-weight: 400;
-      line-height: 40px;
+      line-height: 50px;
 
       margin: 0;
     }
   }
 
-
-  &__wrapper {
-    box-sizing: border-box;
-    min-height: 480px;
-    width: 100%;
-    background: linear-gradient(227.67deg,#ded9ff -16.22%,#dcfff9),#f2f2f8;
-
-    padding: 75px 65px;
-    border-radius: 50px;
-
-    position: relative;
-  }
-
   &__gadget {
-    position: absolute;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: end;
+    justify-content: center;
+
+    min-width: 450px;
+    min-height: 450px;
 
     background-color: #fbfbfe;
 
-    width: 30%;
-    height: calc(100% - 80px);
-
     border-radius: 26px;
-    border: 10px solid rgb(218 218 218 / 30%);
+    border: 10px solid rgba(243, 229, 255, 0.5);
     filter: drop-shadow(0 5px 35px rgba(4,4,21,.06));
+
+    padding: 30px;
+    box-sizing: border-box;
   }
 
   &__button {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-
     display: block;
     padding: 12px 40px;
 
@@ -82,6 +88,58 @@
     &--disabled {
       background-color: #a2a2a2;
       cursor: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .calculator {
+    padding: 0;
+    box-sizing: border-box;
+
+    &__wrapper {
+    }
+
+    &__content {
+      flex-direction: column;
+      max-height: 600px;
+      border-radius: 0;
+    }
+
+    &__gadget {
+      min-width: 300px;
+      min-height: 500px;
+      padding: 0 0 15px;
+    }
+
+    &__title {
+      font-size: 30px;
+      padding: 0 15px;
+      line-height: 34px;
+    }
+
+    &__text {
+      max-width: 100%;
+
+      &-title {
+        width: 100%;
+
+        font-size: 22px;
+        margin: 0 0 20px;
+        padding-bottom: 0;
+        line-height: 34px;
+      }
+
+      &-description {
+        width: 100%;
+
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 28px;
+
+        padding-bottom: 0;
+        margin: 0 0 20px;
+      }
     }
   }
 }
