--- a/src/components/Blog/styles.module.scss
+++ b/src/components/Blog/styles.module.scss
@@ -96,35 +96,42 @@
 .link {
   font-weight: 400;
   text-decoration: none;
-  color: $black;
+  color: $prix-sat;
   transition: color .3s ease-in-out;
   margin: 0 0 20px;
 
   &:hover {
-    color: $black;
+    color: $prix-dark;
   }
 }
 
 @media screen and (max-width: 420px) {
   .blog {
+    margin-top: 150px;
     padding: 50px 0;
   }
 
   .wrapper {
-    width: 95%;
+    width: 100%;
+
     margin: 0;
+    padding: 0 15px;
+    box-sizing: border-box;
   }
 
   .title {
     width: 100%;
 
-    font-size: 28px
+    font-size: 28px;
+    font-weight: 500;
+    text-align: start;
   }
 
   .subtitle {
     width: 100%;
 
     font-size: 18px;
+    text-align: start;
   }
 
   .container {
@@ -153,8 +160,7 @@
   }
 
   .description {
-    text-align: center;
+    text-align: start;
     margin: 10px 0;
-    padding: 0 20px;
   }
 }
