--- a/src/components/Intro/styles.module.scss
+++ b/src/components/Intro/styles.module.scss
@@ -125,16 +125,12 @@
 @media screen and (max-width: 420px) {
   .intro {
     padding: 0;
-
-    &__wrapper {
-      height: 820px;
-      max-height: 821px;
-    }
   }
 
   .wrapper {
     width: 100%;
-    height: 920px;
+    max-height: none;
+    height: 820px;
     padding: 45px;
 
     flex-direction: column;
