feature: add helper isEven and refactor translate animation

--- a/src/components/shared/TranslateAnimation/styles.module.scss
+++ b/src/components/shared/TranslateAnimation/styles.module.scss
@@ -3,11 +3,11 @@
 .animation {
   &__translate {
     &--left {
-      animation: translateLeft 1s ease-in-out;
+      animation: translateLeft 1s ease;
     }
 
     &--right {
-      animation: translateRight 1s ease-in-out;
+      animation: translateRight 1s ease;
     }
   }
 }
